--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -10,6 +10,8 @@
       {{ 'modules/user/users.logout' | t }}
     </button>
   </form>
+  <a href="/subscription">Subscrioption area</a><br/>
+  <a href="/admin">Admin</a><br/>
 {% else %}
   <a href="/users/new">Register</a><br/>
   <a href="/sessions/new">Log in</a><br/>
