--- a/modules/user/public/views/pages/passwords/edit.liquid
+++ b/modules/user/public/views/pages/passwords/edit.liquid
@@ -1,3 +1,5 @@
 {% liquid
+  # platformos-check-disable ConvertIncludeToRender
   include 'modules/user/helpers/must_be_valid_token', token: context.params.token, email: context.params.email
+  # platformos-check-enable ConvertIncludeToRender
 %}
