--- a/modules/user/public/lib/commands/authentication_links/create/check.liquid
+++ b/modules/user/public/lib/commands/authentication_links/create/check.liquid
@@ -4,8 +4,10 @@
   function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'email'
   function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'host'
   function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'token'
-  # TODO: enable hcaptcha by constant
-  # function c = 'modules/core/validations/hcaptcha', c: c, hcaptcha_params: hcaptcha_params
+
+  if context.constants.USER_HCAPTCHA_REQUIRED
+    function c = 'modules/core/validations/hcaptcha', c: c, hcaptcha_params: hcaptcha_params
+  endif
 
   hash_assign object['valid'] = c.valid
   hash_assign object['errors'] = c.errors
