--- a/modules/user/public/lib/commands/passwords/create.liquid
+++ b/modules/user/public/lib/commands/passwords/create.liquid
@@ -4,6 +4,8 @@
 
   if object.valid
     function object = 'modules/user/commands/passwords/create/execute', object: object
+    assign event_payload = null | hash_merge: user_id: object.user_id
+    function _ = 'modules/core/commands/events/publish', type: 'password_created', object: event_payload, delay: null, max_attempts: null
   endif
 
   return object
