--- a/modules/user/public/lib/commands/session/create.liquid
+++ b/modules/user/public/lib/commands/session/create.liquid
@@ -30,12 +30,15 @@
   if object.valid
     function user = 'modules/user/queries/user/load', id: object.id
     if user.id
-      sign_in_rc user_id: user.id
+      sign_in user_id: user.id
       assign params = '{}' | parse_json | hash_merge: user: user, hook_params: hook_params
       function results = 'modules/core/commands/hook/fire', hook: 'user_login', params: params, merge_to_object: true
       hash_assign user['hook_results'] = results
     endif
     hash_assign object['user'] = user
+
+    assign event_payload = null | hash_merge: user_id: object.id
+    function _ = 'modules/core/commands/events/publish', type: 'user_signed_in', object: event_payload, delay: null, max_attempts: null
   endif
 
   return object
