--- a/modules/user/public/lib/commands/user/roles/set.liquid
+++ b/modules/user/public/lib/commands/user/roles/set.liquid
@@ -2,5 +2,9 @@
   assign object = '{}' | parse_json | hash_merge: valid: true, id: id, roles: roles
   function object = 'modules/core/commands/execute', object: object, mutation_name: 'modules/user/roles/set'
 
+  if object.errors == blank
+    assign event_payload = null | hash_merge: id: id, roles: roles
+    function _ = 'modules/core/commands/events/publish', type: 'user_roles_set', object: event_payload, delay: null, max_attempts: null
+  endif
   return object
 %}
