--- a/modules/user/public/lib/queries/user/current.liquid
+++ b/modules/user/public/lib/queries/user/current.liquid
@@ -1,7 +1,12 @@
 {% comment %}
-  Loads the current user
+  Loads the current user. Automatically adds `authenticated` role or `anonymous` role, depending if the user is logged in or not
 {% endcomment %}
 {% liquid
-  function user = 'modules/user/queries/user/load', current: true
+  if context.current_user
+    function user = 'modules/user/queries/user/load', id: context.current_user.id
+    hash_assign user['roles'] = user['roles'] | array_add: 'authenticated'
+  else
+    assign user = '{ roles: "anonymous" }' | parse_json
+  endif
   return user
 %}
