--- a/modules/user/public/lib/queries/user/current.liquid
+++ b/modules/user/public/lib/queries/user/current.liquid
@@ -6,7 +6,7 @@
     function user = 'modules/user/queries/user/load', id: context.current_user.id
     hash_assign user['roles'] = user['roles'] | array_add: 'authenticated'
   else
-    assign user = '{ roles: "anonymous" }' | parse_json
+    assign user = '{ "roles": ["anonymous"] }' | parse_json
   endif
   return user
 %}
