--- a/modules/user/public/views/pages/users/new.liquid
+++ b/modules/user/public/views/pages/users/new.liquid
@@ -1,7 +1,7 @@
 {% liquid
   function current_user = 'modules/user/queries/user/current'
   # platformos-check-disable UnreachableCode
-  include 'modules/user/helpers/can_do_or_unauthorized', requester: current_user, do: 'users.register'
+  include 'modules/user/helpers/can_do_or_redirect', requester: current_user, do: 'users.create', redirect_url: "/"
   # platformos-check-enable UnreachableCode
 
   function registration_fields = 'modules/user/queries/registration_fields/load'
