--- a/modules/user/public/views/pages/users/create.liquid
+++ b/modules/user/public/views/pages/users/create.liquid
@@ -6,7 +6,7 @@ slug: users
   function current_user = 'modules/user/queries/user/current'
 
   # platformos-check-disable UnreachableCode
-  include 'modules/user/helpers/can_do_or_unauthorized', requester: current_user, do: 'users.register'
+  include 'modules/user/helpers/can_do_or_redirect', requester: current_user, do: 'users.create', redirect_url: "/"
   # platformos-check-enable UnreachableCode
 
   function object = 'modules/user/commands/user/create', email: params.email, password: params.password, hook_params: params
