--- a/modules/user/public/lib/commands/authentication_links/create.liquid
+++ b/modules/user/public/lib/commands/authentication_links/create.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function object = 'modules/user/commands/authentication_links/create/build', email: email, host: host, valid_for: valid_for, expires_in: expires_in
+  function object = 'modules/user/commands/authentication_links/create/build', email: email, host: host, valid_for: valid_for
   function object = 'modules/user/commands/authentication_links/create/check', object: object, hcaptcha_params: hcaptcha_params
 
   if object.valid
