--- a/app/modules/user/public/lib/queries/role_permissions/permissions.liquid
+++ b/app/modules/user/public/lib/queries/role_permissions/permissions.liquid
@@ -1,9 +1,9 @@
 {% parse_json data %}
 {
   {% if context.constants.USER_DEFAULT_ROLE != blank %}
-  "{{ context.constants.USER_DEFAULT_ROLE }}": ["subscription.read"],
+  "{{ context.constants.USER_DEFAULT_ROLE }}": [],
   {% endif %}
-  "admin": ["admin.view"],
+  "admin": ["admin_pages.view", "admin.users.manage"],
   "anonymous": ["sessions.create"],
   "authenticated": ["sessions.destroy"]
 }
