Move user roles to array property in user.yml (#42)
* move user roles to array property in user.yml

* code

* remove core

* fixes

* add documentation and some fixes

* remove platformos-check offenses

* release beta 3.0.0

* small fixes

* bump version

* bump version

* release

* Apply suggestions from code review

Co-authored-by: Alex Pozsár <135258214+simplykatsa@users.noreply.github.com>

---------

Co-authored-by: Alex Pozsár <135258214+simplykatsa@users.noreply.github.com>

--- a/modules/user/public/lib/commands/authentication_links/create.liquid
+++ b/modules/user/public/lib/commands/authentication_links/create.liquid
@@ -1,9 +1,11 @@
 {% liquid
-  function object = 'modules/user/commands/authentication_links/create/build', email: email, host: host, valid_for: valid_for, expires_in: expires_in
+  function object = 'modules/user/commands/authentication_links/create/build', email: email, host: host, valid_for: valid_for
   function object = 'modules/user/commands/authentication_links/create/check', object: object, hcaptcha_params: hcaptcha_params
 
   if object.valid
     function object = 'modules/user/commands/authentication_links/create/execute', object: object
+    assign event_payload = null | hash_merge: email: email
+    function _ = 'modules/core/commands/events/publish', type: 'authentication_link_created', object: event_payload, delay: null, max_attempts: null
   endif
 
   return object
