--- a/modules/user/public/lib/hooks/hook_admin_page.liquid
+++ b/modules/user/public/lib/hooks/hook_admin_page.liquid
@@ -11,7 +11,7 @@
       "title": "Users",
       "link_attributes": {}
     },
-    "permission": "users.manage"
+    "permission": "admin.users.manage"
   },
   {
     "relative_path": null,
