--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -4,12 +4,14 @@
 {% if current_user.id %}
   current_user: {{ current_user }}
   <form action="/sessions" method="post">
-    {% render 'modules/user/authenticity_token', context: context %}
+    <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
     <input type="hidden" name="_method" value="delete" />
     <button type="submit">
       {{ 'modules/user/users.logout' | t }}
     </button>
   </form>
+  <a href="/subscription">Subscrioption area</a><br/>
+  <a href="/admin">Admin</a><br/>
 {% else %}
   <a href="/users/new">Register</a><br/>
   <a href="/sessions/new">Log in</a><br/>
