--- a/modules/user/public/views/pages/users/new.liquid
+++ b/modules/user/public/views/pages/users/new.liquid
@@ -5,5 +5,5 @@
   # platformos-check-enable UnreachableCode
 
   function registration_fields = 'modules/user/queries/registration_fields/load'
-  theme_render_rc 'modules/user/users/new', context: context, registration_fields: registration_fields
+  theme_render_rc 'users/new', context: context, registration_fields: registration_fields
 %}
