--- a/modules/user/public/views/pages/passwords/new.liquid
+++ b/modules/user/public/views/pages/passwords/new.liquid
@@ -4,5 +4,5 @@
     redirect_to '/'
   endif
 
-  theme_render_rc 'modules/user/passwords/new', context: context
+  theme_render_rc 'passwords/new', context: context
 %}
