--- a/modules/user/public/lib/commands/authentication_links/create/execute.liquid
+++ b/modules/user/public/lib/commands/authentication_links/create/execute.liquid
@@ -1,6 +1,6 @@
 {% liquid
   if object.valid
-    hash_assign object['url'] = 'https://{host}/passwords/edit?token={token}&email={email}' | expand_url_template: object
+    hash_assign object['url'] = 'https://{host}/passwords/new?token={token}&email={email}' | expand_url_template: object
   endif
 
   return object
