Fix 403; add presetting email on registration page

--- a/modules/user/public/lib/helpers/can_do_or_unauthorized.liquid
+++ b/modules/user/public/lib/helpers/can_do_or_unauthorized.liquid
@@ -13,6 +13,7 @@
 {% liquid
   function can = 'modules/user/helpers/can_do', requester: requester, entity: entity, do: do, access_callback: access_callback
   unless can
+    response_status 403
     try
       theme_render_rc 'components/pages/403'
     catch err
