--- a/modules/user/public/views/pages/users/new.liquid
+++ b/modules/user/public/views/pages/users/new.liquid
@@ -5,5 +5,7 @@
   # platformos-check-enable UnreachableCode
 
   function registration_fields = 'modules/user/queries/registration_fields/load'
-  theme_render_rc 'users/new', context: context, registration_fields: registration_fields
+  assign values = null | hash_merge: email: context.params.email
+
+  theme_render_rc 'users/new', context: context, registration_fields: registration_fields, values: values
 %}
