add tests to commands and fix commands

--- a/modules/user/public/lib/commands/user/create.liquid
+++ b/modules/user/public/lib/commands/user/create.liquid
@@ -2,12 +2,14 @@
   Creates a user.
   Params:
     - email: string
-      the user's email address
+      user's email address
     - password: string
-      the user's password
+      user's password
+    - roles: Array[string]
+      user's initial roles
 {% endcomment %}
 {% liquid
-  function object = 'modules/user/commands/user/create/build', email: email, password: password, hook_params: hook_params
+  function object = 'modules/user/commands/user/create/build', email: email, password: password, hook_params: hook_params, roles: roles
   function object = 'modules/user/commands/user/create/check', object: object
   if object.valid
     function object = 'modules/core/commands/execute', mutation_name: 'modules/user/user/create', object: object, selection: 'user'
