--- a/modules/user/public/lib/commands/user/roles/remove.liquid
+++ b/modules/user/public/lib/commands/user/roles/remove.liquid
@@ -1,9 +1,9 @@
 {% liquid
   assign object = '{}' | parse_json | hash_merge: valid: true, id: id, role : role
-  function object = 'modules/core/commands/execute', object: object, mutation_name: 'modules/user/roles/remove'
+  function object = 'modules/core/commands/execute', object: object, mutation_name: 'modules/user/user/roles/remove', selection: 'user'
 
   if object.errors == blank
-    assign event_payload = null | hash_merge: id: id, role: role
+    assign event_payload = null | hash_merge: user_id: id, role: role
     function _ = 'modules/core/commands/events/publish', type: 'user_role_removed', object: event_payload, delay: null, max_attempts: null
   endif
   return object
