fix missing translation and cleanup emails

--- a/modules/user/public/views/pages/passwords/new.liquid
+++ b/modules/user/public/views/pages/passwords/new.liquid
@@ -5,7 +5,7 @@
     if user
       session reset_password_session_user_id = user.id
     else
-      function _ = 'modules/user/helpers/flash', error: 'modules/user/account.reset_password.expired_link'
+      function _ = 'modules/user/helpers/flash', error: 'modules/user/passwords.expired_link'
       redirect_to '/sessions/new'
       break
     endif
