Logging as functionality

--- a/app/views/pages/admin/index.liquid
+++ b/app/views/pages/admin/index.liquid
@@ -4,5 +4,7 @@
   include 'modules/user/helpers/can_do_or_unauthorized', requester: current_user, do: 'admin.read', redirect_anonymous_to_login: true
   # platformos-check-enable UnreachableCode
 
-  render 'admin/home/index'
+  function users = 'modules/user/queries/user/search', id: null, not_ids: null, email: null, role: null, roles: null, sort: null, limit: 20
+
+  render 'admin/home/index', users: users
 %}
