--- a/app/modules/user/public/lib/queries/role_permissions/permissions.liquid
+++ b/app/modules/user/public/lib/queries/role_permissions/permissions.liquid
@@ -5,7 +5,7 @@
   {% endif %}
   "admin": ["admin_pages.view", "admin.users.manage"],
   "anonymous": ["sessions.create", "users.register"],
-  "authenticated": ["sessions.destroy"]
+  "authenticated": ["sessions.destroy", "oauth.manage"]
 }
 {% endparse_json %}
 
