--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -12,6 +12,7 @@
   </form>
   <a href="/subscription">Subscrioption area</a><br/>
   <a href="/admin">Admin</a><br/>
+  <a href="/oauth">OAuth settings</a><br/>
 {% else %}
   <a href="/users/new">Register</a><br/>
   <a href="/sessions/new">Log in</a><br/>
