--- a/modules/user/public/lib/queries/role_permissions/permissions.liquid
+++ b/modules/user/public/lib/queries/role_permissions/permissions.liquid
@@ -4,7 +4,7 @@
   "{{ context.constants.USER_DEFAULT_ROLE }}": [],
   {% endif %}
   "anonymous": ["sessions.create", "users.register"],
-  "authenticated": ["sessions.destroy"]
+  "authenticated": ["sessions.destroy","oauth.manage"]
 }
 {% endparse_json %}
 
