--- a/modules/user/public/lib/helpers/get_available_oauth2_providers.liquid
+++ b/modules/user/public/lib/helpers/get_available_oauth2_providers.liquid
@@ -13,13 +13,18 @@
         assign client_id_key = "OAUTH2_" | append: provider | append: "_CLIENT_ID"
         assign secret_value_key = "OAUTH2_" | append: provider | append: "_SECRET_VALUE"
         assign scopes_key = "OAUTH2_" | append: provider | append: "_SCOPES"
-  
+        assign token_url_key = "OAUTH2_" | append: provider | append: "_TOKEN_URL"
+        assign user_url_key = "OAUTH2_" | append: provider | append: "_USER_URL"
+        log token_url_key, type: 'DEBUG'
+        log context.constants[token_url_key], type: 'DEBUG'
         assign provider_data = "{}" | parse_json
         hash_assign provider_data['name'] = context.constants[name_key]
         hash_assign provider_data['auth_url'] = context.constants[auth_url_key]
         hash_assign provider_data['client_id'] = context.constants[client_id_key]
         hash_assign provider_data['secret_value'] = context.constants[secret_value_key]
-        hash_assign provider_data['scopes'] = context.contants[scopes_key]
+        hash_assign provider_data['scopes'] = context.constants[scopes_key]
+        hash_assign provider_data['token_url'] = context.constants[token_url_key]
+        hash_assign provider_data['user_url'] = context.constants[user_url_key]
 
         log provider_data, type: 'DEBUG'
   
