Move basic pages to user module

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -10,7 +10,7 @@
       {{ 'modules/user/users.logout' | t }}
     </button>
   </form>
-  <a href="/subscription">Subscrioption area</a><br/>
+  <a href="/subscription">Subscription area</a><br/>
   <a href="/admin">Admin</a><br/>
   <a href="/oauth">OAuth settings</a><br/>
 {% else %}
