--- a/modules/user/public/views/pages/oauth/index.liquid
+++ b/modules/user/public/views/pages/oauth/index.liquid
@@ -2,6 +2,6 @@
     function current_user = 'modules/user/queries/user/current'
     include 'modules/user/helpers/can_do_or_unauthorized', requester: current_user, do: 'oauth.manage', redirect_anonymous_to_login: true
     log 'test', type: 'DEBUG'
-    render 'oauth/home/index'
+    render 'modules/user/oauth/home/index'
   %}
   
