--- a/modules/user/public/views/partials/oauth/home/index.liquid
+++ b/modules/user/public/views/partials/oauth/home/index.liquid
@@ -10,9 +10,16 @@ OAuth management. <a href="/">Back</a><br/>
 {% for provider in available_providers %}
   {% if assigned_providers contains provider[0] %}
     {{ provider[1].name }} - in use
+    <form action="/oauth/{{ provider[0] }}/unassign" method="post">
+      <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
+      <input type="hidden" name="_method" value="delete" />
+      <button type="submit">
+        {{ 'modules/user/oauth.unassign_provider' | t }}
+      </button>
+    </form>
   {% else %}
   {% log provider, type: 'DEBUG' %}
-  {% assign url = "/oauth/" | append: provider[0] | append: '/start'%}
+  {% assign url = "/oauth/" | append: provider[0] | append: '/start' %}
     <a href="{{ url }}">{{ provider[1].name }}</a>
   {% endif %}
 {% endfor %}
