--- a/modules/user/public/views/pages/oauth/start.liquid
+++ b/modules/user/public/views/pages/oauth/start.liquid
@@ -5,8 +5,8 @@ slug: oauth/:provider/start
 
 {% liquid
     if context.params.provider == blank
+      log "Provider not provided", type: "ERROR"
       redirect_to '/'
-      return
     endif
   
     function available_providers = 'modules/user/helpers/get_available_oauth_providers'
@@ -14,17 +14,14 @@ slug: oauth/:provider/start
     assign selected_provider = available_providers[provider]
     
     if selected_provider == blank
+      assign error = "Provider does not exist: " | append: provider
+      log error, type: "ERROR"
       redirect_to '/'
-      return
     endif
     
-    assign data = "{}" | parse_json
-    hash_assign data['scope'] = selected_provider.scopes
-    hash_assign data['client_id'] = selected_provider.client_id
     session state = '' | uuid
-    hash_assign data["state"] = context.session.state
-    assign querified_data = data | querify
 
-    assign url = selected_provider.auth_url | append: '?' | append: querified_data
+    assign command_path = "modules/oauth_" | append: selected_provider.key | append: "/commands/get_redirect_url"
+    function url = command_path, provider: selected_provider, state: context.session.state
     redirect_to url
 %}
